@@ -20,7 +20,7 @@ package org.apache.jena.atlas.lib;
 
 import java.io.File ;
 import java.net.URLEncoder;
-import java.nio.file.Paths ;
+import java.nio.file.Path;
 
 import org.apache.jena.atlas.AtlasException ;
 import org.apache.jena.base.Sys ;
@@ -84,7 +84,7 @@ public class IRILib
      * which is strict ASCII.
      * Include ':' (segment-nc) and '/' (segment separator).
      */
-    public static char[] charsComponent = {
+    private static char[] charsComponent = {
         //
         '!', '$', '&', '\'', '(', ')', '*', '+', ',', ';', '=', ':', '/', '?', '#', '[', ']', '@',
         // Other
@@ -150,10 +150,12 @@ public class IRILib
     }
 
     /** Create a string that is a IRI for the filename.
+     *  <ul>
      *  <li>The file name may already have {@code file:}.
      *  <li>The file name may be relative.
      *  <li>Encode using the rules for a path (e.g. ':' and'/' do not get encoded)
      *  <li>Non-IRI characters get %-encoded.
+     *  </ul>
      */
     public static String filenameToIRI(String fn) {
         if ( fn == null ) return cwdURL ;
@@ -194,8 +196,13 @@ public class IRILib
         // To get Path.toAbsolutePath to work, we need to convert /C:/ to C:/
         // then back again.
         fn = fixupWindows(fn) ;
-        fn = Paths.get(fn).toAbsolutePath().normalize().toString() ;
-
+        try {
+            // Windows issue
+            // Drive letter may not exists in which case it has no working directory "x:"
+            fn = Path.of(fn).toAbsolutePath().normalize().toString() ;
+        } catch (java.io.IOError ex) {
+            // Any IO problems - > ignore.
+        }
         if ( trailingSlash && ! fn.endsWith("/") )
             fn = fn + "/" ;
 
